# clintela-proto

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  IMPLEMENTATION_HANDOFF.md  Makefile  README.md  TODOS.md  bootstrap.sh  conftest.py  docker-compose.services.yml  docker-compose.yml  pyproject.toml  setup-deploy-key.sh  setup-sudoers.sh
.claude/: launch.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/accounts/: admin.py  api.py  context_processors.py  middleware.py  models.py  tokens.py  urls.py  utils.py  views.py  views_dev.py
apps/accounts/migrations/: 0001_initial.py  0002_authattempt.py  0003_add_phone_number_index.py  0004_user_last_active_at.py
apps/accounts/tests/: conftest.py  test_auth_status_api.py  test_middleware.py  test_rate_limiting.py  test_tokens.py  test_views.py  test_views_dev.py
apps/administrators/: auth.py  services.py  urls.py  views.py
apps/administrators/tests/: test_auth.py  test_coverage.py  test_services.py  test_views.py
apps/agents/: __init__.py  admin.py  agents.py  api.py  constants.py  consumers.py  context_processors.py  llm_client.py  models.py  personas.py  prompts.py  routing.py  schemas.py  services.py  specialists.py  support_group.py  tasks.py  translation.py  validators.py  workflow.py
apps/agents/migrations/: 0001_initial.py  0002_messagecitation_agentmessage_cited_documents_and_more.py  0003_phase4_lifecycle_escalation.py  0004_agentconversation_clinician_and_more.py  0005_alter_agentmessage_role.py  0006_add_translation_fields.py  0007_remove_conversation_escalation_reason.py  0008_support_group.py
apps/agents/tests/: factories.py  test_admin_coverage.py  test_agents.py  test_api_comprehensive.py  test_checkin_preambles.py  test_constants.py  test_consumers_comprehensive.py  test_context_preferences.py  test_llm_client.py  test_patient_websocket_mixin.py  test_personas.py  test_preference_sanitizer.py  test_prompt_preferences.py  test_rag_integration.py  test_routing_and_context.py  test_services.py  test_services_comprehensive.py  test_specialists.py  test_support_group_consumer.py  test_support_group_models.py  (+6 more)
apps/analytics/: models.py  services.py  tasks.py
apps/caregivers/: models.py
apps/checkins/: admin.py  apps.py  models.py  question_bank.py  selection.py  services.py  tasks.py  urls.py  views.py  widgets.py
apps/clinical/: admin.py  api.py  apps.py  constants.py  context_processors.py  models.py  rules.py  services.py  tasks.py  urls.py  views.py
apps/clinicians/: admin.py  auth.py  ical.py  models.py  services.py  tasks.py  urls.py  views.py
apps/knowledge/: __init__.py  admin.py  embeddings.py  ingestion.py  models.py  parsers.py  retrieval.py  sanitizer.py
apps/messages_app/: backends.py  models.py  services.py  tasks.py  transcription.py  urls.py  views.py
apps/notifications/: admin.py  api.py  backends.py  caregiver_push.py  consumers.py  models.py  services.py  tasks.py
apps/pathways/: models.py  services.py
apps/patients/: admin.py  middleware.py  models.py  services.py  urls.py  views.py
apps/surveys/: admin.py  apps.py  models.py  scoring.py  services.py  signals.py  tasks.py  urls.py  views.py
clintela-mobile/: capacitor.config.ts  package.json  tsconfig.json  vite.config.ts
clintela-mobile/public/: index.html
clintela-mobile/src/: app.ts  webview-polish.css
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
config/tests/: test_feature_flags.py
docs/: ACCEPTANCE-TESTING-PHASE3.md  AGENT_SYSTEM_ACCEPTANCE.md  agents.md  development.md  engineering-review.md  philosophy.md  roadmap.md  security.md
docs/designs/: clintela-foundation.md
docs/plans/: 2026-03-18-agent-system-design.md  2026-03-18-patient-authentication-design.md  2026-03-18-patient-authentication-implementation.md  2026-03-19-patient-chat-ui.md  2026-03-19-phase3-communication.md  2026-03-20-phase4-clinical-knowledge-rag.md  2026-03-20-phase5-clinician-dashboard.md  2026-03-21-phase6-survey-epro.md  2026-03-22-demo-run-of-show.md  2026-03-24-clinician-dashboard-url-routing.md  2026-03-24-demo-run-of-show-v2.md
static/css/: celebrations.css
static/js/: admin-dashboard.js  chat.js  checkin-widget.js  clinician-dashboard.js  clinician-research-chat.js  markdown-render.js  notifications.js  support-group.js  theme.js  voice-recorder.js
templates/: base.html  base_admin.html  base_clinician.html  base_patient.html  home.html
templates/accounts/: dob_entry.html  rate_limited.html  token_expired.html
templates/administrators/: dashboard.html  login.html  pathway_detail.html  pathways.html
templates/clinical/: health_card.html  vitals_tab.html
templates/clinicians/: dashboard.html  login.html  schedule.html
templates/components/: _chat_input.html  _chat_sidebar.html  _checkin_widget.html  _checkin_widget_options.html  _demo_bar.html  _dev_toolbar.html  _empty_chat.html  _header.html  _message_bubble.html  _messages.html  _persona_profile_card.html  _skeleton.html  _support_group_bubble.html  _support_group_empty.html  _support_group_input.html  _support_group_welcome.html
templates/emails/: appointment_confirmation.html  appointment_reminder.html
templates/patients/: about_me.html  booking.html  booking_confirmation.html  caregivers.html  consent.html  dashboard.html
templates/surveys/: _score_history.html  _survey_card.html  _survey_completion.html  _survey_modal.html  _survey_results.html  _tab_surveys.html
tests/: __init__.py  conftest.py  test_accounts.py  test_config.py  test_markdown_chat_styles.py  test_messages_rendering.py  test_models.py  test_patients.py
tests/e2e/: conftest.py  test_clinician_url_routing.py  test_patient_chat.py  test_patient_chat_composer.py
(+182 files in other folders)
